# entity/collection.go
@@ -1,6 +1,0 @@
-package entity
-
-type Collection struct {
-	Id   string
-	Name string
-}
