# internal/dto/auth/auth_request.go
@@ -1,0 +1,12 @@
+package dto
+
+import "ta13-svc/internal/entity"
+
+type AuthLoginRequest struct {
+	Username string `json:"username" validate:"required"`
+	Password string `json:"password" validate:"required"`
+}
+
+type AuthRegisterRequest struct {
+	entity.UserEntityModel
+}
