# internal/usecase/auth/route.go
@@ -1,0 +1,8 @@
+package auth
+
+import "github.com/labstack/echo/v4"
+
+func (h *handler) Route(g *echo.Group) {
+	g.POST("/login", h.Login)
+	g.POST("/register", h.Login)
+}
