# main.go
@@ -1,16 +1,25 @@
 package main
 
 import (
-	_ "github.com/go-sql-driver/mysql"
 	"github.com/labstack/echo/v4"
-	"github.com/labstack/echo/v4/middleware"
-	"github.com/spf13/viper"
-	echoSwagger "github.com/swaggo/echo-swagger"
-	"ta13-svc/data/mysql"
-	_ "ta13-svc/docs"
-	"ta13-svc/usecase/collections"
-	"ta13-svc/usecase/user"
+	"github.com/sirupsen/logrus"
+	"os"
+	db "ta13-svc/database"
+	"ta13-svc/database/migration"
+	"ta13-svc/internal/factory"
+	"ta13-svc/internal/http"
+	"ta13-svc/internal/middleware"
+	"ta13-svc/pkg/elasticsearch"
+	"ta13-svc/pkg/env"
 )
+
+func init() {
+	ENV := os.Getenv("ENV")
+	env := env.NewEnv()
+	env.Load(ENV)
+
+	logrus.Info("Choosen environment " + ENV)
+}
 
 // @title API TA
 // @version 1.0
@@ -24,31 +33,15 @@ import (
 // @host localhost:9000
 // @BasePath /
 func main() {
-
-	viper.SetConfigFile(".env")
-	viper.ReadInConfig()
-
-	port := ":" + viper.GetString("ServerPort")
-
-	mysql.NewDB()
+	db.Init()
+	migration.Init()
+	elasticsearch.Init()
+	var PORT = os.Getenv("PORT")
 
 	e := echo.New()
+	middleware.Init(e)
 
-	e.Use(middleware.LoggerWithConfig(middleware.LoggerConfig{
-		Format: `[${time_rfc3339} ${status} ${method} ${host}${path} ${latency_human}]` + "\n",
-	}))
-
-	e.Use(middleware.Recover())
-
-	e.Use(middleware.CORSWithConfig(middleware.CORSConfig{
-		AllowOrigins: []string{"*"},
-		AllowHeaders: []string{echo.HeaderOrigin, echo.HeaderContentType, echo.HeaderAccept},
-	}))
-
-	e.GET("/swagger/*", echoSwagger.WrapHandler)
-	e.GET("/", user.GetHello)
-	e.GET("/users", user.GetUsers)
-	e.GET("/collections", collections.GetCollections)
-
-	e.Logger.Fatal(e.Start(port))
+	f := factory.NewFactory()
+	http.Init(e, f)
+	e.Logger.Fatal(e.Start(":" + PORT))
 }
